Fix top alignment of <th> in codicology table

--- a/app/resources/css/repertorium.css
+++ b/app/resources/css/repertorium.css
@@ -413,7 +413,7 @@ span.add {
 /* Codicology table                                                        */
 /* ======================================================================= */
 /* Right-aligned numbering from http://jsfiddle.net/zgMYu/10/ */
-#codicologyTable > tr > th {
+#codicologyTable th {
   text-align: left;
   vertical-align: top;
 }
